--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,51 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
+html, body{
+  font-family: "DM Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  height: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.main{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+  row-gap: 20px;
+  height: 100%;
+  h1, p{
+    margin: 0;
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.header > *{
+  width: 100%;
+  text-align: center;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+hr{
+  border: solid black 1px;
+  width: 100%;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.form > form{
+  all: unset;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  gap: 10px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.fileDisplay{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.footer{
+  justify-self: flex-end;
 }
