--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,6 @@ html, body{
 .main{
   display: flex;
   flex-direction: column;
-  flex: 1;
   align-items: center;
   row-gap: 20px;
   height: 100%;
@@ -19,13 +18,27 @@ html, body{
   }
 }
 
+.loadingOverlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
 .header > *{
   width: 100%;
   text-align: center;
 }
 
 hr{
-  border: solid black 1px;
+  border: solid rgb(205, 205, 205) 1px;
   width: 100%;
 }
 
@@ -47,5 +60,6 @@ hr{
 }
 
 .footer{
-  justify-self: flex-end;
+  width: 100%;
+  height: 50px;
 }
