--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 html, body{
+  user-select: none;
+  background-color: #f5f5f5;
+  color: #0a0a0a;
   font-family: "DM Sans", serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -40,23 +43,106 @@ hr{
 }
 
 .form > form{
-  all: unset;
   display: flex;
   flex-direction: column;
-  justify-items: center;
+  align-items: center;
+  gap: 20px;
+}
+
+#fileInput{
+  display: none;
+}
+
+.fileInputArea{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px dashed #0a0a0a;
+  border-radius: 8px;
+  min-height: 150px;
+  min-width: 250px;
+  padding: 20px;
+  text-align: center;
+  p{
+    margin: 0;
+  }
+}
+
+#imageProcess{
+  height: 50px;
+  min-width: 215px;
+  border: solid black 2px;
+  background-color: #f5f5f5;
+  border-radius: 12px;
+  font-family: "DM Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 16px;
+  text-align: center;
+}
+
+.resizeField{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 10px;
 }
 
-.fileDisplay{
+#imageWidth, #imageHeight{
+  height: 35px;
+  width: 100px;
+  text-align: center;
+  border: solid black 1px;
+  border-radius: 8px;
+  font-family: "DM Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 16px;
+}
+
+#fileUpload, #fileDownload{
+  height: 50px;
+  min-width: 215px;
+  background-color: #0a0a0a;
+  color: #f5f5f5;
+  border: solid #0a0a0a 2px;
+  border-radius: 12px;
+  font-family: "DM Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 17px;
+}
+
+#fileUpload{
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding-left: 55px;
+  align-items: center;
+  gap: 10px;
+}
+
+#fileDownload{
+  display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 10px;
+}
+
+
+.processedImage{
+  margin-top: 30px;
+  border: 2px dashed #0a0a0a;
+  border-radius: 8px;
+  padding: 20px;
+  text-align: center;
+  p{
+    margin: 0 0 10px 0;
+  }
 }
 
 .footer{
   width: 100%;
   height: 50px;
+  text-align: center;
 }
