--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
+:root {
+  --black: #000000;
+  --white: #f5f5f5;
+}
+
 html, body{
   user-select: none;
-  background-color: #f5f5f5;
-  color: #0a0a0a;
+  background-color: var(--white);
+  color: var(--black);
   font-family: "DM Sans", serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -24,7 +29,7 @@ html, body{
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
+  background: rgba(255, 255, 255, 0.9);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,8 +37,7 @@ html, body{
   z-index: 9999;
 }
 
-.header > *{
-  width: 100%;
+.header, .footer{
   text-align: center;
 }
 
@@ -58,7 +62,8 @@ hr{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px dashed #0a0a0a;
+  gap: 10px;
+  border: 2px dashed var(--black);
   border-radius: 8px;
   min-height: 150px;
   min-width: 250px;
@@ -72,8 +77,8 @@ hr{
 #imageProcess{
   height: 50px;
   min-width: 215px;
-  border: solid black 2px;
-  background-color: #f5f5f5;
+  border: solid var(--black) 2px;
+  background-color: var(--white);
   border-radius: 12px;
   font-family: "DM Sans", serif;
   font-optical-sizing: auto;
@@ -93,7 +98,7 @@ hr{
   height: 35px;
   width: 100px;
   text-align: center;
-  border: solid black 1px;
+  border: solid var(--black) 1px;
   border-radius: 8px;
   font-family: "DM Sans", serif;
   font-optical-sizing: auto;
@@ -102,11 +107,15 @@ hr{
 }
 
 #fileUpload, #fileDownload{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   height: 50px;
   min-width: 215px;
-  background-color: #0a0a0a;
-  color: #f5f5f5;
-  border: solid #0a0a0a 2px;
+  background-color: var(--black);
+  color: var(--white);
+  border: solid var(--black) 2px;
   border-radius: 12px;
   font-family: "DM Sans", serif;
   font-optical-sizing: auto;
@@ -114,35 +123,13 @@ hr{
   font-size: 17px;
 }
 
-#fileUpload{
-  display: flex;
-  justify-content: flex-start;
-  padding-left: 55px;
-  align-items: center;
-  gap: 10px;
-}
-
-#fileDownload{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-
 .processedImage{
   margin-top: 30px;
-  border: 2px dashed #0a0a0a;
+  border: 2px dashed var(--black);
   border-radius: 8px;
   padding: 20px;
   text-align: center;
   p{
     margin: 0 0 10px 0;
   }
-}
-
-.footer{
-  width: 100%;
-  height: 50px;
-  text-align: center;
 }
